fixed logo sizing and text alignment

--- a/lesson4/css/small.css
+++ b/lesson4/css/small.css
@@ -11,12 +11,15 @@ nav {
 	list-style: none;
 	padding: 0;
 }
+
 .navigation li:first-child {
 	display: block;
 }
+
 .navigation li {
 	display: none;
 }
+
 .navigation a {
     display: block;
     color: white;
@@ -25,6 +28,7 @@ nav {
     text-decoration: none;
     font-size: 0.9rem;
 }
+
 .navigation a:hover {
     background-color: #ddd;
     color: black;
@@ -41,10 +45,13 @@ body {
     font-family: 'Yusei Magic', sans-serif, 'Open Sans', sans-serif, 'Montserrat', sans-serif;
 }
 
-header, footer {
-    flex-flow: column;
-    text-align: center;
+main {
+    text-align: left;
+    margin-left: 5%;
+    max-width: 90%;
+    font-size: 0.8rem;
 }
+
 
 header {
     /* display: block; */
@@ -52,14 +59,14 @@ header {
     margin: 0;
     background-color: rgba(168, 162, 162, 0.918);
     color: white;
-}
-
-header .logo, header .header_div {
-    display: inline-block;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
 }
 
 
 footer {
+    flex-flow: column;
+    text-align: center;
     display: flex;
     background-color: gray;
     padding: 5px;
@@ -69,28 +76,19 @@ footer {
     color: white;
 }
 
-main {
-    text-align: left;
-    margin-left: 5%;
-    max-width: 90%;
-    font-size: 0.8rem;
-}
-
-header h1 {
-    display: inline;
-    margin: 5px;
-}
-
 footer p {
     margin: 5px;
 }
+
+
+
 
 /* Logo formatting */
 .logo {
     /* display: flex; */
     /* float: left; */
-    width: 15%;
-    height: 15%;
+    width: 75%;
+    height: 75%;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     margin-bottom: 2%;
 }
